# sctr-railway-api

./: .dockerignore  .gitignore  CLOUDFLARE.md  DEPLOY.md  DEPLOY_RAILWAY.md  DOCKER.md  Dockerfile  RAILWAY.md  README.md  RESTART.md  STANDALONE.md  deploy-pages.sh  fetch_sctr.py  index.html  main.py  pyproject.toml  railway.toml  requirements.txt  run_api.sh
api/: .dockerignore  Dockerfile  README.md  fetch_sctr.py  main.py  requirements-docker.txt  requirements.txt  run_local.sh
srankpicks/: .env.example  DEPLOY.md  TROUBLESHOOT.md  index.html  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
srankpicks/src/: App.css  App.tsx  api.ts  index.css  types.ts
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  types.ts
